# ebook_dictionary_creator

./: .gitignore  README.md  TODO.txt  add_openrussian_to_database.py  collations.py  convert-to-real-json.py  convert_file_to_utf8.py  create_database_fast.py  create_database_from_csv.py  create_database_russian.py  create_database_spanish.py  create_db_tables.sql  create_db_tables_russian.sql  create_db_tables_spanish.sql  create_kindle_dict_spanish.py  create_openrussian_database_from_csv.py  examples.py  helper_functions.py  main.py  pyproject.toml  remove_accents.py  requirements.txt  reset_db.py  russian_dictionary.py  russiandictionaryOLD.py  test_pymorphy.py  update_russian_data.py  words_model.py
create_databases/: add_openrussian_to_database.py  collations.py  convert_file_to_utf8.py  create_database.py  create_database_russian.py  create_database_spanish.py  create_db_tables_russian.sql  create_db_tables_spanish.sql  create_openrussian_database_from_csv.py  download_kaikki_db.py
create_kindle_dict/: create_kindle_dict.py  create_kindle_dict_from_db.py  create_kindle_dict_from_db_russian.py  create_kindle_dict_spanish_from_db.py  create_kindle_dict_spanish_german.py  create_tab_file.py  debugging_words.txt  tatoeba_augmentation.py
dictionary_functionality/: collations.py  set_collated_index.py
docs/: TODO.txt  stupid_kindle_algorithm.md
ebook_dictionary_creator/: __init__.py
various_tools/: find_ebook_words_not_in_wiktionary.py  find_words_in_RAE_not_in_wiktionary.py  generate_most_common_words.py  kaikki_raw_extract_test.py
(+42 files in other folders)
