[tool.poetry]
authors = ["Hannes Krumbiegel"]
description = ""
license = "GPLv3"
name = "ebook_dictionary_creator"
version = "0.4.4"

[tool.poetry.dependencies]
pyglossary = {git = "https://github.com/Vuizur/pyglossary"}
python = "^3.8"
stressed-cyrillic-tools = "^0.1.3"
unidecode = "^1.3.4"
tatoebatools = "^0.2.1"
requests = "^2.28.1"
jsonpickle = "^2.2.0"
wordfreq = "^3.0.1"
pycountry = {git = "https://github.com/flyingcircusio/pycountry"}


[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
